<!--
   Copyright 2017-2024 Koki Fukuda
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
       http://www.apache.org/licenses/LICENSE-2.0
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
    <string name="app_name">SecureScreen</string>
    <string name="notification_title">Start SecureScreen</string>
    <string name="notification_message">Lock current screen</string>
    <string name="show_notification">SHOW NOTIFICATION</string>
    <string name="hide_notification">DON\'T SHOW NOTIFICATION</string>
    <string name="show_notification_message">Click notification to pin screen</string>
    <string name="start_on_boot">Start on boot completed</string>
    <string name="start_on_boot_true_summary">Show notification on boot completed</string>
    <string name="start_on_boot_false_summary">Don\'t show notification on boot completed</string>
    <string name="version">SecureScreen Version</string>
    <string name="developer" translatable="false">Developed by Chronoscope</string>
    <string name="finish_secure_screen">Finish Secure Screen</string>
    <string name="secure_screen_finished">Secure screen finished</string>
    <string name="pin_enabled">Ask for PIN before finish SecureScreen</string>
    <string name="pin_disabled">Not ask for PIN before finish SecureScreen</string>
    <string name="current_pin">Current PIN</string>
    <string name="new_pin">New PIN</string>
    <string name="new_pin_confirm">Confirm new PIN</string>
    <string name="done">Done</string>
    <string name="backspace">Backspace</string>
    <string name="overlay_permission_denied">Denied necessary permission</string>
    <string name="settings">SETTINGS</string>
    <string name="info">INFO</string>
    <string name="oss_license">Open Source License</string>
    <string name="finish_on_back_pressed">Finish on back button pressed</string>
    <string name="join_develop">Join SecureScreen development</string>
    <string name="notification_channel_default">Default</string>
    <string name="unlock_password_description">For password on unlocking:\n\"Settings\" app &gt; \"Security\" &gt; \"Screen pinning\" &gt; Turn on &gt; Turn on \"Ask for PIN before unlocking\"</string>
    <string name="finish">FINISH</string>
    <string name="enable_finish_button">Show finish button in pinned screen</string>
    <string name="permission_request">SecureScreen requires notification permission in order to display the screen-fixing shortcut in Notifications. Tap OK to allow notifications.</string>
</resources>
